# gatewasm

./: .editorconfig  Cargo.toml  README.md
core/: Cargo.toml
core/examples/yell-api-c/: Makefile  yell.c
core/examples/yell-api-c/msgpack-c/: CMakeCache.txt
core/examples/yell-api-c/msgpack-c/example/boost/: cmake_install.cmake
core/examples/yell-api-c/msgpack-c/example/c/: cmake_install.cmake  lib_buffer_unpack.js  simple_c.js  user_buffer_unpack.js
core/examples/yell-api-c/msgpack-c/example/cpp03/: class_intrusive_map.js  class_non_intrusive.js  enum.js  map_based_versionup.js  protocol_new.js  reuse_zone.js
core/examples/yell-api-rust/: Cargo.toml
core/examples/yell-api-rust/src/: gatewasm.rs  lib.rs
core/src/: admin.rs  main.rs
core/src/router/: handler.rs  route.rs
examples/yell-api-c/: gatewasm.c  gatewasm.h
examples/yell-api-c/msgpack-c/: cmake_install.cmake  msgpack-targets.cmake
examples/yell-api-c/msgpack-c/example/: cmake_install.cmake
src/: admin.rs  router.rs  utils.rs
src/router/: error.rs  mod.rs  route.rs
web-ui/: package.json
web-ui/public/: index.html
web-ui/src/: index.css  index.js
web-ui/src/components/App/: App.js
web-ui/src/components/Container/: Container.js
web-ui/src/components/CreateRouteModal/: CreateRouteModal.js
web-ui/src/components/Dropdown/: Dropdown.js
web-ui/src/components/FakeProgressBar/: FakeProgressBar.js
web-ui/src/components/FileInput/: FileInput.js
web-ui/src/components/FormField/: FormField.js
web-ui/src/components/Loader/: Loader.js
web-ui/src/components/Main/: Main.js
(+15 files in other folders)
