[package]
name = "gatewasm"
version = "0.1.0"
authors = ["bazk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "^0.4.4"
base64 = "^0.11.0"
err-derive = "^0.2.1"
futures = "^0.3.1"
futures-util = "^0.3.1"
hyper = "^0.14.12"
rmp-serde = "^0.14.0"
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.44"
tokio = { version = "0.2", features = ["full"] }
wasmer-runtime = "^0.13.0"
wasmer-wasi = "^0.13.0"
